--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
         <!-- 个人简介 -->
         <div class="mb-16 text-center">
             <img src="https://picsum.photos/150/150" alt="个人头像" class="w-32 h-32 rounded-full mx-auto mb-4 border-2 border-gray-200 shadow-sm">
-            <h1 class="text-3xl md:text-4xl font-bold mb-2">你的名字</h1>
-            <p class="text-lg text-gray-600 mb-4">职位名称 | 专业领域</p>
+            <h1 class="text-3xl md:text-4xl font-bold mb-2">Kui Ma</h1>
+            <p class="text-lg text-gray-600 mb-4">ENTJ+libra | want be rich</p>
             <p class="text-gray-600 max-w-2xl mx-auto">
                 简短的个人介绍，概括你的专业背景、核心优势和职业目标。可以提及你的主要技能和兴趣领域。
             </p>
