--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>个人主页 | 文章与简历</title>
+    <title>Makui's Homapage</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/font-awesome@4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <script>
@@ -27,11 +27,11 @@
         <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <div class="flex items-center">
-                    <a href="/" class="text-xl font-bold text-primary">个人主页</a>
+                    <a href="/" class="text-xl font-bold text-primary">主页</a>
                 </div>
                 <div class="hidden md:flex space-x-8">
                     <a href="#articles" class="text-gray-600 hover:text-primary transition-colors">文章</a>
-                    <a href="#resume" class="text-gray-600 hover:text-primary transition-colors">简历</a>
+                    <a href="#resume" class="text-gray-600 hover:text-primary transition-colors">关于我</a>
                     <a href="#contact" class="text-gray-600 hover:text-primary transition-colors">联系我</a>
                 </div>
                 <div class="md:hidden">
@@ -49,9 +49,9 @@
         <div class="mb-16 text-center">
             <img src="https://picsum.photos/150/150" alt="个人头像" class="w-32 h-32 rounded-full mx-auto mb-4 border-2 border-gray-200 shadow-sm">
             <h1 class="text-3xl md:text-4xl font-bold mb-2">Kui Ma</h1>
-            <p class="text-lg text-gray-600 mb-4">ENTJ+libra | want be rich</p>
+            <p class="text-lg text-gray-600 mb-4">中国科学院大学 | ENTJ+Libra</p>
             <p class="text-gray-600 max-w-2xl mx-auto">
-                简短的个人介绍，概括你的专业背景、核心优势和职业目标。可以提及你的主要技能和兴趣领域。
+                人类的成长是将时空压缩进躯壳，并在生活中快速膨胀爆炸的过程。比起在某个场景里发呆，我跟喜欢拥抱当下，在好吃懒做中热爱生活，在旅行放空中寻找乐趣，在朋友闲谈中发现意义。
             </p>
             <div class="mt-6 flex justify-center space-x-5">
                 <a href="https://github.com/你的用户名" class="text-gray-500 hover:text-primary transition-colors" aria-label="GitHub">
@@ -63,7 +63,7 @@
                 <a href="https://twitter.com" class="text-gray-500 hover:text-primary transition-colors" aria-label="Twitter">
                     <i class="fa fa-twitter text-xl"></i>
                 </a>
-                <a href="mailto:your@email.com" class="text-gray-500 hover:text-primary transition-colors" aria-label="Email">
+                <a href="mailto:609895741@qq.com" class="text-gray-500 hover:text-primary transition-colors" aria-label="Email">
                     <i class="fa fa-envelope text-xl"></i>
                 </a>
             </div>
@@ -78,19 +78,19 @@
                 <article class="bg-white rounded-lg shadow-sm p-6 hover:shadow-md transition-shadow">
                     <div class="flex flex-col md:flex-row md:items-center md:justify-between mb-3">
                         <h3 class="text-xl md:text-2xl font-bold mb-2 md:mb-0">
-                            <a href="#" class="text-gray-800 hover:text-primary transition-colors">文章标题示例一</a>
+                            <a href="#" class="text-gray-800 hover:text-primary transition-colors">随时记录作证培育了人的恶，视频平台放大了这种恶</a>
                         </h3>
                         <span class="text-sm text-gray-500">2023年8月22日</span>
                     </div>
                     <p class="text-gray-600 mb-4">
-                        这是文章的简短摘要，简要介绍文章的主要内容和观点，吸引读者点击阅读全文。摘要长度建议控制在2-3行左右。
+                        人与人之间的交流会基于不同的情感动机，当随手拍摄记录可用作“证据”，人们之间的情感动机会朝着负向发展，这种趋势似乎在印证“人之初，性本恶”的立场。
                     </p>
                     <div class="flex items-center justify-between">
                         <div class="flex items-center space-x-2">
                             <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2.5 py-0.5 rounded">技术</span>
                             <span class="inline-block bg-gray-100 text-gray-800 text-xs px-2.5 py-0.5 rounded">前端</span>
                         </div>
-                        <a href="#" class="text-primary hover:text-blue-700 text-sm font-medium flex items-center">
+                        <a href="https://mp.weixin.qq.com/s/L9X6yY9JLwUyEjgHP74EpA" class="text-primary hover:text-blue-700 text-sm font-medium flex items-center">
                             阅读全文 <i class="fa fa-angle-right ml-1"></i>
                         </a>
                     </div>
