--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
             <h1 class="text-3xl md:text-4xl font-bold mb-2">Kui Ma</h1>
             <p class="text-lg text-gray-600 mb-4">中国科学院大学 | ENTJ+Libra</p>
             <p class="text-gray-600 max-w-2xl mx-auto">
-                人类的成长是将时空压缩进躯壳，并在生活中快速膨胀爆炸的过程。比起在某个场景里发呆，我跟喜欢拥抱当下，在好吃懒做中热爱生活，在旅行放空中寻找乐趣，在朋友闲谈中发现意义。
+                人类的成长是将时空压缩进躯壳，并在生活中快速膨胀爆炸的过程。
+比起在某个场景里发呆，我跟喜欢拥抱当下，在好吃懒做中热爱生活，在旅行放空中寻找乐趣，在朋友闲谈中发现意义。
             </p>
             <div class="mt-6 flex justify-center space-x-5">
                 <a href="https://github.com/你的用户名" class="text-gray-500 hover:text-primary transition-colors" aria-label="GitHub">
@@ -80,15 +81,13 @@
                         <h3 class="text-xl md:text-2xl font-bold mb-2 md:mb-0">
                             <a href="#" class="text-gray-800 hover:text-primary transition-colors">随时记录作证培育了人的恶，视频平台放大了这种恶</a>
                         </h3>
-                        <span class="text-sm text-gray-500">2023年8月22日</span>
+                        <span class="text-sm text-gray-500">2025年8月22日</span>
                     </div>
                     <p class="text-gray-600 mb-4">
                         人与人之间的交流会基于不同的情感动机，当随手拍摄记录可用作“证据”，人们之间的情感动机会朝着负向发展，这种趋势似乎在印证“人之初，性本恶”的立场。
                     </p>
                     <div class="flex items-center justify-between">
                         <div class="flex items-center space-x-2">
-                            <span class="inline-block bg-blue-100 text-blue-800 text-xs px-2.5 py-0.5 rounded">技术</span>
-                            <span class="inline-block bg-gray-100 text-gray-800 text-xs px-2.5 py-0.5 rounded">前端</span>
                         </div>
                         <a href="https://mp.weixin.qq.com/s/L9X6yY9JLwUyEjgHP74EpA" class="text-primary hover:text-blue-700 text-sm font-medium flex items-center">
                             阅读全文 <i class="fa fa-angle-right ml-1"></i>
