--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <span class="text-sm text-gray-500">2025年8月22日</span>
                     </div>
                     <p class="text-gray-600 mb-4">
-                        这个视频用了大概12h+的时间完成，灵感来自于吃饭间隙，当时突然想起一个笑话吃饭前说我要开动了是让食物做好准备，我突然就思考这些食物在知道自己要被吃掉的宿命后，它们自己怎么想！
+                        这个视频用了大概8h的时间完成，灵感来自于吃饭间隙，当时突然想起一个笑话吃饭前说我要开动了是让食物做好准备，我突然就思考这些食物在知道自己要被吃掉的宿命后，它们自己怎么想！
                     </p>
                     <div class="flex items-center justify-between">
                         <div class="flex items-center space-x-2">
@@ -166,16 +166,16 @@
                             <div>
                                 <div class="flex flex-col md:flex-row md:justify-between md:items-start">
                                     <div>
-                                        <h4 class="font-semibold text-lg">高级前端开发工程师</h4>
-                                        <p class="text-gray-600">某科技有限公司</p>
+                                        <h4 class="font-semibold text-lg">中国质量新闻网</h4>
+                                        <p class="text-gray-600">编辑</p>
                                     </div>
-                                    <span class="text-sm text-gray-500 mt-1 md:mt-0">2021年至今</span>
+                                    <span class="text-sm text-gray-500 mt-1 md:mt-0">2020年9月至今</span>
                                 </div>
                                 
                                 <ul class="mt-3 space-y-2 text-gray-700">
                                     <li class="flex items-start">
                                         <i class="fa fa-check-circle text-primary mt-1 mr-2"></i>
-                                        <span>负责公司核心产品的前端架构设计与开发，优化前端性能，提升用户体验</span>
+                                        <span>负责负责公司核心产品的前端架构设计与开发，优化前端性能，提升用户体验</span>
                                     </li>
                                     <li class="flex items-start">
                                         <i class="fa fa-check-circle text-primary mt-1 mr-2"></i>
